TEST_PROGRAMS/VALID/08/incDecStatemnet.go
package main;
func main(){
    x := 0;
    x++;
    x--;
}
