TEST_PROGRAMS/INVALID/09/blank_index.go
package blank_funcindex

func main() {
    a := _[0]
}
